Add Bootstrap, Session, UserMailer

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,28 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-<%= yield %>
+  <% flash.each do |name, msg| -%>
+    <%= content_tag :div, msg, class: name %>
+  <% end -%>
+  
+  <nav class="navbar navbar-default" role="navigation">
+    <div class="container-fluid">
+      <div class="col-xs-4">
+        <h1>YourTimeZone.com</h1>
+      </div>
+      <div class="col-xs-4 col-xs-offset-4">
+        <% if user_logged_in? %>
+          <%= link_to 'Sign Out', sign_out_path(current_user.id), method: :delete %>
+        <% else %>
+          <%= link_to 'Sign In', sign_in_path %>
+        <% end %>
+      </div>
+    </div>
+  </nav>
+  
+  <div class="container-fluid">
+    <%= yield %>
+  </div>
 
 </body>
 </html>
