--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @user do |f| %>
+<%= nested_form_for @user do |f| %>
         
     <% if @user.errors.any? %>
       <div id="error_explanation">
@@ -39,10 +39,23 @@
           <%= f.password_field :password_confirmation, class: "form-control" , placeholder: "Confirm Password" %>
         </div>
     </div>
+    
+    <div class="row">
+    <h3>Your Timezone</h3>
+      <%= f.fields_for :yourtimes do |time| %>
+        <div class="input-group col-xs-6">
+          <span class="input-group-addon"><%= time.label :place %></span>
+          <%= time.text_field :place, class: "form-control" , placeholder: "Place" %>
+        </div>
+        <%= time.link_to_remove "Remove this Timezone" %>
+        <% end %>
+      <p><%= f.link_to_add "Add a Timezone", :yourtimes %></p>
+    </div>
+    
     </br>
     <div class="row">
         <div class="input-group col-xs-3">
-          <%= f.submit 'Sign Up', class: "btn btn-default" %>
+          <%= f.submit class: "btn btn-default" %>
         </div>
     </div>
 <% end %>
