--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,3 +2,15 @@
 <h3> Details </h3>
 <p> Name: <%= @user.name %></p>
 <p> Email: <%= @user.email %></p>
+
+<% if @user.yourtimes.count > 0%>
+    <h3>Timezone</h3>
+    <ul>
+        <% @user.yourtimes.each do |time|%>
+            <li>
+                <p><%= time.place %>'s timezone is <%= Time.now %> </p>
+            </li>
+        <% end %>
+    </ul>
+    
+<% end %>
