--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,11 +17,18 @@
         <h1>YourTimeZone.com</h1>
       </div>
       <div class="col-xs-4 col-xs-offset-4">
+      <ul class="nav nav-pills" role="tablist">
+        <!--<li role="presentation" class="active"><a href="#">Home</a></li>-->
+        <li role="presentation"><%= link_to 'Home', home_path %></li>
+        <li role="presentation"><%= link_to 'Users', users_path %></li>
         <% if user_logged_in? %>
-          <%= link_to 'Sign Out', sign_out_path(current_user.id), method: :delete %>
+          <li role="presentation"><%= link_to 'Profile', user_path(id: current_user.id) %></li>
+          <li role="presentation"><%= link_to 'Sign Out', sign_out_path(current_user.id), method: :delete %></li>
         <% else %>
-          <%= link_to 'Sign In', sign_in_path %>
+          <li role="presentation"><%= link_to 'Sign In', sign_in_path %></li>
         <% end %>
+        
+      </ul>
       </div>
     </div>
   </nav>
