--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,3 +14,8 @@
     </ul>
     
 <% end %>
+
+<p>
+    <%= link_to 'Edit Profile', edit_user_path(id: @user.id) %> &nbsp;&nbsp;&nbsp;&nbsp;
+    <%= link_to 'Delete', user_path(id: @user.id), method: :delete, confirm: "Are you sure?" %>
+</p>
